[package]
name = "web3utilities"
version = "1.0.0"
authors = ["Charles Chege <charleschege@protonmail.ch>"]
license = "MPL-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "0.9.3"
bs58 = { version = "0.4.0", optional = true }
ed25519-dalek = { version = "1.0.1", default-features = false, features = [
    "u64_backend",
], optional = true }
hex = { version = "0.4.3", optional = true }
nanorand = { version = "0.7.0", features = [
    "chacha",
    "zeroize",
    "rdseed",
], default-features = false, optional = true }
schnorrkel = { version = "0.10.2", default-features = false, features = [
    "u64_backend",
], optional = true }

[features]
default = ["common"]
full = ["common", "base58", "hex", "ed25519", "sr25519", "random"]
base58 = ["dep:bs58", "common"]
hex = ["dep:hex", "common"]
ed25519 = ["dep:ed25519-dalek", "common"]
sr25519 = ["dep:schnorrkel", "common"]
random = ["dep:nanorand", "common"]
common = []
