[package]
name = "web3utilities"
version = "2.1.0"
authors = ["Charles Chege <charleschege@protonmail.ch>"]
license = "MPL-2.0"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/charleschege/Web3Utilities.git"
repository = "https://github.com/charleschege/Web3Utilities.git"
keywords = ["web3"]
categories = ["encoding", "parsing"]
description = "Commonly used cryptograpgic data structures in Web3"

[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "0.9.3"
bs58 = { version = "0.4.0", optional = true }
hex = { version = "0.4.3", optional = true }
monotonic-time = "1.0.2"
schnorrkel = { version = "0.10.2", default-features = false, features = [
    "u64_backend",
], optional = true }
tai64 = { version = "4.0.0", optional = true }
nanorand = { version = "0.7", optional = true, default-features = false, features = [
    "chacha",
    "rdseed",
] }
ed25519-dalek = { version = "1.0.1", optional = true, default-features = false, features = [
    "u64_backend",
] }
zeroize = "1.5.7"
constant_time_eq = "0.2.4"

[features]
default = []
full = [
    "common",
    "base58",
    "hex",
    "ed25519",
    "sr25519",
    "random",
    "tai64",
    "clonable_secret",
    "debug_secret",
    "zeroize_timestamp",
    "zeroize_ed25519_public",
    "zeroize_ed25519_signature",
    "zeroize_sr25519_public",
    "zeroize_sr25519_signature",
    "zeroize_x25519_public",
    "zeroize_aead",
]
base58 = ["dep:bs58"]
hex = ["dep:hex"]
ed25519 = ["dep:ed25519-dalek", "common"]
sr25519 = ["dep:schnorrkel", "common"]
random = ["dep:nanorand"]
common = []
tai64 = ["dep:tai64"]
clonable_secret = []
debug_secret = ["dep:hex"]
zeroize_timestamp = []
zeroize_ed25519_public = []
zeroize_ed25519_signature = []
zeroize_sr25519_public = []
zeroize_sr25519_signature = []
zeroize_x25519_public = []
zeroize_aead = []
